// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> should render with system type 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
}

.c1 {
  display: block;
  padding-right: 10px;
}

.c2 {
  padding-right: 5px;
}

<div
    class="c0"
  >
    <span
      class="c1"
    >
      [22:00:00]
    </span>
    <strong
      class="c2"
    >
      Servidor:
    </strong>
    Romulo entrou na sala
  </div>
</DocumentFragment>
`;

exports[`<Message /> should render with userName 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 5px;
}

.c1 {
  display: block;
  padding-right: 10px;
}

.c2 {
  padding-right: 5px;
}

<div
    class="c0"
  >
    <span
      class="c1"
    >
      [22:00:00]
    </span>
    <strong
      class="c2"
    >
      Romulo:
    </strong>
    Fala galera
  </div>
</DocumentFragment>
`;
